<resources>
    <string name="app_name">Lilith</string>
    <string name="app_name_ch">莉莉斯</string>
    <string name="tttt">题目</string>
    <!--权限Label-->
    <string name="lilith_permission_label">允许读取和更新莉莉斯设置</string>
    <string name="master_measure">大师亲算</string>
    <string name="cons_share_text">分享我的运势</string>
    <string name="cons_share_customization_text">定制我的运势</string>
    <string name="cons_love_text">感情运势上升</string>
    <string name="cons_money_text">财富运势上升</string>
    <string name="cons_work_text">工作运势上升</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="date_birth">出生日期</string>
    <string name="time_birth">出生时间</string>
    <string name="place_birth">出生地</string>
    <string name="place_now">现居地</string>
    <string name="select_sex">请选择性别</string>
    <string name="select_date_birth">请选择出生日期</string>
    <string name="select_time_birth">请选择出生时间</string>
    <string name="select_place_birth">请选择出生地</string>
    <string name="select_place_now">请选择现居住地</string>
    <string name="user_information_desc">您的个人信息将用于订制您的每日运势</string>
    <string name="quick_login">快捷登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="forget_password_01">忘记密码？</string>
    <string name="registered_account">注册账号</string>
    <string name="set_password">设置密码</string>
    <string name="phone_number">手机号</string>
    <string name="input_validation_code">输入验证码</string>
    <string name="get_validation_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="re_send">s后重发</string>
    <string name="existing_number">已注册账号</string>
    <string name="clause_description">登录代表你同意星座的</string>
    <string name="privacy_terms">隐私条款</string>
    <string name="company">重庆可兰达科技有限公司</string>
    <string name="register">注册</string>
    <string name="wechat">微信</string>
    <string name="password">密码</string>
    <string name="cons_share_word">分享我的运势</string>
    <string name="cons_cal_title">运势日历</string>
    <string name="modify_password">修改密码</string>
    <string name="password_length_description">密码长度6-16位，支持数字、字母、字符</string>
    <string name="old_password">输入原密码</string>
    <string name="new_password">输入新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="confirm">确认</string>
    <string name="cons_hot_topic_card_title">热门话题</string>
    <string name="cons_hot_topic_card_more">查看全部</string>
    <string name="topic_card_show_detail">立即查看</string>
    <string name="share_activity_title">分享给好友</string>
    <string name="share_activity_cancel">取消</string>
    <string name="share_wxhy">微信好友</string>
    <string name="share_wxcc">朋友圈</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="log_dialog_to_lod_btn">登录查看</string>
    <string name="log_dialog_to_complete_btn">填写资料</string>
    <string name="log_dialog_to_lod">查看专属运势,请登录后填写资料!</string>
    <string name="log_dialog_to_complete">查看专属运势,请填写资料!</string>
    <string name="log_dialog_to_lod_topic">登录后才可参与话题讨论</string>
    <string name="feed_back">意见反馈</string>
    <string name="setting">设置</string>
    <string name="bind_phone">绑定手机</string>
    <string name="about_me">关于我们</string>
    <string name="net_err">网络异常</string>
    <string name="out_program">再按一次退出程序</string>
    <string name="cons_my_info_default_cn_word">喜怒哀乐喜欢表现在脸上，让人一看便知道，把心中的苦闷说出来会舒服一些。</string>
    <string name="cons_my_info_default_en_word">Sorrow and happiness, like the expression on the face, let people see, you know, the heart of the depression will be comfortable.</string>
    <string name="bind_account">绑定账号</string>
    <string name="edit_info">编辑资料</string>
    <!--tab名字-->
    <string name="cece">测测</string>
    <string name="huati">话题</string>
    <string name="me">我</string>

    <!--运势title-->
    <string name="cons_ys_title_total">运势概括</string>
    <string name="cons_ys_title_love">感情运</string>
    <string name="cons_ys_title_work">工作运</string>
    <string name="cons_ys_title_money">财富运</string>

    <!--星座-->
    <string name="aries">白羊座</string>
    <string name="taurus">金牛座</string>
    <string name="gemini">双子座</string>
    <string name="cancer">巨蟹座</string>
    <string name="leo">狮子座</string>
    <string name="virgo">处女座</string>
    <string name="libra">天秤座</string>
    <string name="scorpio">天蝎座</string>
    <string name="sagittarius">射手座</string>
    <string name="capricorn">摩羯座</string>
    <string name="aquarius">水瓶座</string>
    <string name="pisces">双鱼座</string>
    <string name="company_name">重庆可兰达科技有限公司</string>
    <string name="check_update">检查更新</string>
    <string name="logout_user">退出登录</string>
    <string name="bind_we_chat">绑定微信</string>
    <string name="feedback_hint_content">请输入遇到的问题或建议...</string>
    <string name="phone_contact">联系方式: QQ/邮箱/电话</string>
    <string name="feed_commit">提交</string>
    <string name="we_chat_account">微信:  暗月莉莉斯</string>
    <string name="email_content">邮箱：lilith@Youloft.com</string>
    <string name="qq_content">QQ群：180275927</string>
    <string name="version_code">版本号: 1.0</string>
    <string name="quckly_measure">立即测算</string>
    <string name="rise_con">上升星座</string>
    <string name="moon_con">月亮星座</string>
    <string name="sun_con">太阳星座</string>
    <string name="my_topic">我的话题</string>
    <string name="my_information">我的资料</string>
    <string name="else_login_method">其他登录方式</string>
    <string name="password_desc">密码长度6-16位，支持数字、字母、字符</string>
    <string name="input_password">输入密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="cons_title_word_unlod" formatted="false">%s好, 请您完善资料获取准确运势!</string>
    <string name="cons_title_word_lod" formatted="false">%s好 %s, 您的今日运势如下</string>

    //话题
    <string name="see_now">立即查看</string>
    <string name="topic_title">星座话题</string>
    <string name="choose_your_point">请选择您的观点</string>
    <string name="published_point">发表的观点</string>
    <string name="reply">回复</string>
    <string name="load_more">展开更多</string>
    <string name="other_topic">其他话题</string>
    <string name="hot_reply">热门评论</string>
    <string name="publish">发表</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="vote_to">投票给: </string>
    <string name="no_point_now">暂无观点</string>
    <string name="click_to_see_topic">点击查看更多</string>

    <string-array name="cons_luck_line_color">
        <item>#de5deb,#99de5deb,#0fde5deb</item>
        <item>#ff6262,#99ff6161,#0fff6161</item>
        <item>#49b5ff,#9949b5ff,#0f49b5ff</item>
        <item>#ffb74a,#99ffb74a,#0fffb74a</item>
    </string-array>
</resources>
