<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_password"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password_length_description"
            android:textColor="@color/white_50"
            android:textSize="13dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_old_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:hint="@string/old_password"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_50"
                    android:textSize="20dp" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_old_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/mine_tips_icon"
                        android:visibility="invisible" />

                    <ImageView
                        android:id="@+id/iv_old_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/login_right_icon"
                        android:visibility="invisible" />
                </FrameLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/white_20" />
        </LinearLayout>
        <!--输入新密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/new_password"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_50"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/iv_is_show_pwd01"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/login_password_on_icon"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/iv_clean_password01"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/login_password_delete_icon"
                    android:visibility="invisible" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/white_20" />
        </LinearLayout>
        <!--确认新密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/confirm_new_password"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_50"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/iv_is_show_pwd02"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/login_password_on_icon"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/iv_clean_password02"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/login_password_delete_icon"
                    android:visibility="invisible" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/white_20" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/slt_login_btn"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/confirm"
            android:textColor="@color/slt_login_text_color"
            android:textSize="17dp" />
    </LinearLayout>
    <!--返回按钮-->
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="23dp"
        android:padding="10dp"
        android:src="@drawable/back_icon" />
</FrameLayout>